initial commit for coordinator support
