# hack/python-sdk/swagger.json
@@ -7,6 +7,30 @@
   },
   "paths": {},
   "definitions": {
+    "jobset.v1alpha2.Coordinator": {
+      "description": "Coordinator defines which pod can be marked as the coordinator for the JobSet workload.",
+      "type": "object",
+      "required": [
+        "replicatedJob"
+      ],
+      "properties": {
+        "jobIndex": {
+          "description": "JobIndex is the index of Job which contains the coordinator pod (i.e., for a ReplicatedJob with N replicas, there are Job indexes 0 to N-1). Defaults to 0 if unset.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "podIndex": {
+          "description": "PodIndex is the Job completion index of the coordinator pod. Defaults to 0 if unset.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "replicatedJob": {
+          "description": "ReplicatedJob is the name of the ReplicatedJob which contains the coordinator pod.",
+          "type": "string",
+          "default": ""
+        }
+      }
+    },
     "jobset.v1alpha2.FailurePolicy": {
       "type": "object",
       "properties": {
@@ -120,6 +144,10 @@
       "description": "JobSetSpec defines the desired state of JobSet",
       "type": "object",
       "properties": {
+        "coordinator": {
+          "description": "Coordinator can be used to assign a specific pod as the coordinator for the JobSet. If defined, an annotation will be added to all Jobs and pods with coordinator pod, which contains the stable network endpoint where the coordinator pod can be reached. jobset.sigs.k8s.io/coordinator=\u003cpod hostname\u003e.\u003cheadless service\u003e",
+          "$ref": "#/definitions/jobset.v1alpha2.Coordinator"
+        },
         "failurePolicy": {
           "description": "FailurePolicy, if set, configures when to declare the JobSet as failed. The JobSet is always declared failed if any job in the set finished with status failed.",
           "$ref": "#/definitions/jobset.v1alpha2.FailurePolicy"
